# High-Performance-Lang-Compiler

./: .clang-format  CMakeLists.txt
data/: hello_world.hplc  reserved_words_test.hplc  simpleCode1.hplc  simple_example_0.hplc  simple_example_1.hplc  simple_example_2.hplc
doc/: architectureDesign.md  classDesign.md  whiteboard.excalidraw
include/: bytecode_generator.h  expression_node.h  instruction.h  instruction_generator.h  lexer.h  macro_resolver.h  parser.h  preprocessor.h  semantic_analyzer.h
include/HPLC/: bytecode_generator.h  instruction.h  instruction_generator.h  lexer.h  macro_resolver.h  preprocessor.h  semantic_analyzer.h  source_code.h  token.h
include/HPLC/file_handling/: file_reader.h
include/HPLC/optimization/: optimizer.h
include/file_handling/: file_reader.h  file_writer.h
include/optimization/: control_flow_graph.h  optimizer.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  fileReader_test.cpp  lexer_test.cpp  preprocessor_test.cpp
